gcc/testsuite/rust.test/fail_compilation/implicit_returns_err3.rs
fn test(x: i32) -> i32 {
    if x > 1 {
        1
    }
}

fn main() {
    let a = test(9);
}
